# dltool

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
.github/actions/bootstrap-dltool/: action.yaml
.github/workflows/: .tests-matrix.yml  tests.yml
src/dltool/: __init__.py
src/dltool/config/: __init__.py
src/dltool/console/: base_command.py  cli.py  project_command.py
src/dltool/project_management/: classes.py
src/dltool/project_templates/main_dlt_project/: cookiecutter.json
src/dltool/templates/main_dlt_project/: cookiecutter.json
src/dltool/tool/: custom_classes.py  utils.py
tests/: test_config.py
tests/project_management/: test_classes.py
tests/tool/: test_custom_classes.py
