# Configuration file for Poetry Python Packaging and Dependency Management
#
#                           DLTool
#
# Tooling set for creating Delta Live Table projects on Databricks
#
# For more information about Poetry: https://python-poetry.org/


[tool.poetry]
name = "dltool"
version = "0.1.0"
description = "Tooling set for creating Delta Live Table projects on Databricks"
authors = ["ngeense <filoplast@gmail.com>"]
readme = "README.md"
license = "GNU GENERAL PUBLIC LICENSE"
repository = "https://github.com/MazeFX/dltool"

packages = [
    {include = "dltool", from = "src"}
]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
dltool = "dltool.console.cli:main"

# # Dependency installation options
# [tool.poetry.group.docs]
# optional = true


[tool.poetry.dependencies]
python = "^3.9.5"
cleo = "^2.1.0"
structlog = "^24.1.0"

# Pydantic models
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
cookiecutter = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

# Test tools
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

pylint = "^3.1.0"

# Formatting
isort = "^5.13.2"
black = "^24.3.0"

# Local logger enrichment
rich = "^13.7.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.9.0"

# [tool.poetry.group.docs.dependencies]


# only used in github actions
[tool.poetry.group.github-actions]
optional = true


[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"


[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests/fixtures",
    "tests/masonry/builders/fixtures",
    "tests/utils/fixtures",
]

# # use of importlib-metadata backport makes it impossible to satisfy mypy
# # without some ignores: but we get different sets of ignores at different
# # python versions.
# [[tool.mypy.overrides]]
# module = [
#     'poetry.plugins.plugin_manager',
#     'poetry.repositories.installed_repository',
#     'tests.console.commands.self.test_show_plugins',
#     'tests.helpers',
# ]
# warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    'deepdiff.*',
    'fastjsonschema.*',
    'httpretty.*',
    'pexpect.*',
    'requests_toolbelt.*',
    'shellingham.*',
    'virtualenv.*',
    'xattr.*',
]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: mark tests that require internet access",
]


[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
